# estudo-spark-1

./: .gitignore  README.md  pyproject.toml
exemplos-conceito/: 01-exemplo.py  03-exemplo.py  03-explicacao.md  07-exemplo.py  07-explicacao.md  08-exemplo.py  09-exemplo.py  10-exemplo.py  11-exemplo.py  12-exemplo.py  13-exemplo.py  README.md
exemplos-conceito/01-data/: dados.json  dados1.json  dados2.json  dados_modificados.json
exemplos-conceito/07-data/07-delta/: .part-00000-5c8e09d1-79f6-4d4d-895e-ab46959a1283-c000.snappy.parquet.crc  .part-00000-78ad52c1-d05f-426c-965f-ec6f32268b23-c000.snappy.parquet.crc  .part-00000-c97d7d7b-8e0b-42d6-9ae6-702ee4793996-c000.snappy.parquet.crc  .part-00000-cc12fe0b-1e25-4121-b4ea-49a783524ea0-c000.snappy.parquet.crc  .part-00000-df171763-1806-4620-98aa-2c26c16103ea-c000.snappy.parquet.crc  part-00000-5c8e09d1-79f6-4d4d-895e-ab46959a1283-c000.snappy.parquet  part-00000-78ad52c1-d05f-426c-965f-ec6f32268b23-c000.snappy.parquet  part-00000-c97d7d7b-8e0b-42d6-9ae6-702ee4793996-c000.snappy.parquet  part-00000-cc12fe0b-1e25-4121-b4ea-49a783524ea0-c000.snappy.parquet  (+1 more)
material-apoio/: DuckDB.md
mini-projeto/: README.md  simulation_cdc.py  simulation_scd.py  src_bronze.py  src_gold.py  src_silver.py  test_data_pipeline.py
mini-projeto-1-spark/: README.md  simulation_cdc.py  simulation_cdc_scd.py  simulation_scd.py  src_gold.py  test_data_pipeline.py
mini-projeto-2-duckdb/: Bronze.py  Gold.py  Landing.py  README.md  Silver.py
mini-projeto-2-duckdb/backup/: Bronze_01.py  Silver_01.py
(+384 files in other folders)
