[project]
name = "estudo-spark-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcus Queiroz",email = "mffpqueiroz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=3.5.0",
    "delta-spark>=3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.0"
delta-spark = "^3.0.0"
