[project]
name = "estudo-spark-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcus Queiroz",email = "mffpqueiroz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "estudo-spark-1"
version = "0.1.0"
description = ""
authors = ["Marcus Queiroz <mffpqueiroz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "3.4.0"
delta-spark = "2.4.0"
